2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
    (findRangeBounds): Handle null dataset,
    * tests/org/jfree/chart/renderer/category/junit/WaterfallBarRendererTests.java
    (testFindRangeBounds): New tests.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedAreaRenderer.java
    (findRangeBounds): Check for null dataset,
    (drawItem): Return early if series is not visible,
    (getPreviousHeight): Deprecated as it is never used,
    * tests/org/jfree/chart/renderer/category/junit/StackedAreaRendererTests.java
    (testFindRangeBounds): New tests.

2009-02-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/category/BarRenderer.java
    (defaultShadowsVisible): New field,
    (getDefaultShadowsVisible): New method,
    (setShadowsVisible): Likewise,
    * source/org/jfree/renderer/xy/XYBarRenderer.java
    (defaultShadowsVisible): New field,
    (getDefaultShadowsVisible): New method,
    (setShadowsVisible): Likewise.

2009-02-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/category/StackedBarRenderer3D.java
    (findRangeBounds): Check for null dataset,
    * tests/org/jfree/chart/renderer/category/junit/StackedBarRenderer3DTests.java
    (testFindRangeBounds): New test.

2009-02-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/GrayPaintScale.java
    (alpha): New field,
    (GrayPaintScale(double, double)): Delegate to new constructor,
    (GrayPaintScale(double, double, int)): New constructor,
    (getAlpha): New method,
    (getPaint): Use alpha setting for returned paint,
    (equals): Check new field,
    (hashCode): New method,
    * tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
    (testEquals): Check new field.
