@@ -1,5 +1,11 @@
 2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/renderer/category/StackedAreaRenderer.java
+    (drawItem): Generate entities only in first pass, and add call for drawing
+    item labels in second pass.
+
+2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
     (findRangeBounds): Handle null dataset,
     * tests/org/jfree/chart/renderer/category/junit/WaterfallBarRendererTests.java
